[TBD-1807] Set as deprecated mongoDB 2.1 2.2 and 2.6, Cassandra 1.1 and 1.2

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulkExec/tCassandraOutputBulkExec_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulkExec/tCassandraOutputBulkExec_messages.properties
@@ -2,8 +2,8 @@ HELP=org.talend.help.tCassandraOutputBulkExec
 LONG_NAME=Generate SSTable and bulk output them to a cassandra solution.
 SCHEMA.NAME=Schema
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
 HOST.NAME=Host
 PORT.NAME=Port
