--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -59,6 +59,6 @@ REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X
-DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X
-DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X
+DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X (Deprecated)
