--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages.properties
@@ -2,8 +2,8 @@ HELP=org.talend.help.tCassandraBulkExec
 LONG_NAME=Bulk output SSTable to a cassandra solution.
 SCHEMA.NAME=Schema
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
 HOST.NAME=Host
 PORT.NAME=Port
