--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages.properties
@@ -22,8 +22,8 @@ REQUIRED_AUTHENTICATION.NAME=Required authentication
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
 API_TYPE.NAME=API type
 API_TYPE.ITEM.HECTOR=Hector
