[TBD-1770] Update Hive components to support SSL

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -140,6 +140,11 @@ METASTORE_CLASSNAME.NAME=Driver class
 METASTORE_USERNAME.NAME=Username
 METASTORE_PASSWORD.NAME=Password
 
+USE_SSL.NAME=Use SSL encryption
+SSL_TRUST_STORE.NAME=Trust store path
+SSL_TRUST_STORE_PASSWORD.NAME=Trust store password
+ENCRYPTION.NAME=Encryption
+
 ADVANCED_PROPERTIES.NAME=Hive Properties 
 ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 ADVANCED_PROPERTIES.ITEM.VALUE=Value
