[TBD-1619] Add SSL support on TmongoDBconnection, tMongoDBInput, tMongoDBOutput and tMongoDBRow.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -31,3 +31,5 @@ READ_PREFERENCE.ITEM.PRIMARY_PREFERRED=Primary preferred
 READ_PREFERENCE.ITEM.SECONDARY=Secondary
 READ_PREFERENCE.ITEM.SECONDARY_PREFERRED=Secondary preferred
 READ_PREFERENCE.ITEM.NEAREST=Nearest
+
+USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
