--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -62,3 +62,5 @@ DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
 DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X (Deprecated)
 DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X (Deprecated)
 DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X (Deprecated)
+
+USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
