TDI-32265:Impact Analysis is not available in context menu for JSON files in metadata repo

--- a/main/plugins/org.talend.repository.hcatalog/plugin.xml
+++ b/main/plugins/org.talend.repository.hcatalog/plugin.xml
@@ -113,6 +113,10 @@
             class="org.talend.repository.hcatalog.ui.handler.HCatalogContextUpdateService"
             serviceId="IRepositoryContextUpdateService">
       </Service>
+      <Service
+            class="org.talend.repository.hcatalog.service.HCatalogService"
+            serviceId="IHCatalogService">
+      </Service>
    </extension>
 
 </plugin>
