--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -41,6 +41,7 @@ PIG_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 PIG_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 PIG_VERSION.ITEM.Cloudera_CDH5_1_MR1=Cloudera CDH5.1(MR 1 mode)
 PIG_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
+PIG_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
 PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
 PIG_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Pig 0.9.2)
 PIG_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (Pig 0.12.0)
