--- a/main/plugins/org.talend.repository.hbaseprovider/plugin.xml
+++ b/main/plugins/org.talend.repository.hbaseprovider/plugin.xml
@@ -92,7 +92,7 @@
       </classloader>
       <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH5_4"
-            libraries="hbase-common-1.0.0-cdh5.4.0.jar;hbase-client-1.0.0-cdh5.4.0.jar;hbase-protocol-1.0.0-cdh5.4.0.jar;zookeeper-3.4.5-cdh5.4.0.jar;htrace-core-3.0.4.jar;commons-logging-1.1.1.jar;commons-codec-1.7.jar;guava-12.0.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;netty-3.6.6.Final.jar;hadoop-common-2.6.0-cdh5.4.0.jar;hadoop-auth-2.6.0-cdh5.4.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;hbase-server-1.0.0-cdh5.4.0.jar">
+            libraries="hbase-common-1.0.0-cdh5.4.0.jar;hbase-client-1.0.0-cdh5.4.0.jar;hbase-protocol-1.0.0-cdh5.4.0.jar;zookeeper-3.4.5-cdh5.4.0.jar;htrace-core-3.0.4.jar;commons-logging-1.1.1.jar;commons-codec-1.7.jar;guava-12.0.1.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;netty-3.6.6.Final.jar;hadoop-common-2.6.0-cdh5.4.0.jar;hadoop-auth-2.6.0-cdh5.4.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-collections-3.2.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;hbase-server-1.0.0-cdh5.4.0.jar;htrace-core-3.1.0-incubating.jar">
       </classloader>
       <classloader
             index="HBASE:MAPR:MAPR2"
