[TBD-1852] Allow user to discard empty fields.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -35,6 +35,7 @@ LOOP.ITEM.VALUE=Default value
 LOOP.NAME=JSON Loop
 MAP.NAME=Configure JSON Tree
 MAPPING.ITEM.PARENT_NODE_PATH=Parent node path
+MAPPING.ITEM.REMOVE_NULL_FIELD=Remove Null Field
 MAPPING.NAME=Mapping
 NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
@@ -64,3 +65,4 @@ DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X (Deprecated)
 DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X (Deprecated)
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
+CREATE_EMPTY_ELEMENT.NAME=Create empty element if needed
