TBD-1908 Add additional jdbc settings field to enter special properties (zookeeper discovery mode)
Conflicts:
	main/plugins/org.talend.designer.components.bigdata/components/tELTHiveOutput/tELTHiveOutput_main.javajet

--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -59,6 +59,7 @@ HOST.NAME=Host
 PASS.NAME=Password
 PORT.NAME=Port
 USER.NAME=Username
+HIVE_ADDITIONAL_JDBC.NAME=Additional JDBC Settings
 
 LINK_STYLE.NAME=Style link :
 LINK_STYLE.ITEM.AUTO=Auto 
