--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -15,6 +15,7 @@ SCHEMA.NAME=Schema
 SCHEMA_DB.NAME=Schema
 TABLE.NAME=Table Name
 DBTABLE.NAME=Table Name
+HIVE_ADDITIONAL_JDBC.NAME=Additional JDBC Settings
 
 VERSION.NAME=Version
 
