--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -19,6 +19,7 @@ QUERYSTORE.NAME=Query Type
 GUESS_SCHEMA.NAME=Guess Schema
 QUERY.NAME=Query
 USE_PARQUET.NAME=This query uses parquet objects
+HIVE_ADDITIONAL_JDBC.NAME=Additional JDBC Settings
 
 ENCODING.NAME=Encoding
 TRIM_ALL_COLUMN.NAME=Trim all the String/Char columns
