--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -24,10 +24,9 @@ REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
 DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X (Deprecated)
-DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X (Deprecated)
-DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X (Deprecated)
+
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
