[TBD-1939] Refactor MongoDBConnection and add Kerberos and authentication mechanisms

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -7,7 +7,6 @@ LONG_NAME=Create a connection to a MongoDB server
 NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
 PORT.NAME=Port
-REQUIRED_AUTHENTICATION.NAME=Required authentication
 PROPERTY.NAME=PROPERTY
 USERNAME.NAME=Username
 USE_REPLICA_SET.NAME=Use replica set address
@@ -15,7 +14,6 @@ REPLICA_SET.NAME=Replica address
 REPLICA_SET.ITEM.REPLICA_HOST=Replica host
 REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
-AUTHENTICATION.NAME=Authentication
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
@@ -31,3 +29,15 @@ READ_PREFERENCE.ITEM.SECONDARY_PREFERRED=Secondary preferred
 READ_PREFERENCE.ITEM.NEAREST=Nearest
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
+
+AUTHENTICATION.NAME=Authentication
+USE_AUTHENTICATION.NAME= Use authentication
+AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
+AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environements)
+AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
+AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
+AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
+
+KRB_USER_PRINCIPAL.NAME= User principal
+KRB_REALM.NAME=Realm
+KRB_KDC.NAME=KDC server
