[TBD-1952] Add read preference to Mongo client reads Take the option from tMongoDBConnection and add it to tMongoDBInput

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -34,7 +34,7 @@ DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
 
 
-
+READ_PREFERENCE_GROUP.NAME=Read Preference
 SET_READ_PREFERENCE.NAME=Set read preference
 
 READ_PREFERENCE.NAME=Read Preference
