[TBD-1940] Mongo client now supports write concerns for writes Option added to tMongoDBOutput

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -62,6 +62,13 @@ DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
 
+SET_WRITE_CONCERN.NAME=Set write concern
+WRITE_CONCERN.NAME=Write concern
+WRITE_CONCERN_GROUP.NAME=Write concern
+WRITE_CONCERN.ITEM.ACKNOWLEDGED=ACKNOWLEDGED
+WRITE_CONCERN.ITEM.UNACKNOWLEDGED=UNACKNOWLEDGED
+WRITE_CONCERN.ITEM.JOURNALED=JOURNALED
+WRITE_CONCERN.ITEM.REPLICA_ACKNOWLEDGED=REPLICA_ACKNOWLEDGED
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
 CREATE_EMPTY_ELEMENT.NAME=Create empty element if needed
