[TBD-1951] Add message about query isolation.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -44,4 +44,5 @@ READ_PREFERENCE.ITEM.SECONDARY=Secondary
 READ_PREFERENCE.ITEM.SECONDARY_PREFERRED=Secondary preferred
 READ_PREFERENCE.ITEM.NEAREST=Nearest
 
-USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
+USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication)
+NOTE_ISOLATION.NAME=If you are running on a Sharded Cluster, please, be sure to use to include shard key on the query.
