[TBD-1963] Fix SSL message.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -28,7 +28,7 @@ READ_PREFERENCE.ITEM.SECONDARY=Secondary
 READ_PREFERENCE.ITEM.SECONDARY_PREFERRED=Secondary preferred
 READ_PREFERENCE.ITEM.NEAREST=Nearest
 
-USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
+USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption) 
 
 AUTHENTICATION.NAME=Authentication
 USE_AUTHENTICATION.NAME= Use authentication
