--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -70,5 +70,5 @@ WRITE_CONCERN.ITEM.UNACKNOWLEDGED=UNACKNOWLEDGED
 WRITE_CONCERN.ITEM.JOURNALED=JOURNALED
 WRITE_CONCERN.ITEM.REPLICA_ACKNOWLEDGED=REPLICA_ACKNOWLEDGED
 
-USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
+USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption) 
 CREATE_EMPTY_ELEMENT.NAME=Create empty element if needed
