--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -29,4 +29,4 @@ DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
 
 
-USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication) 
+USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption) 
