[TBD-1948] Add bulk write support to mongoDB output

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -3,7 +3,7 @@
 AUTHENTICATION.NAME=Authentication
 COLLECTION.NAME=Collection
 COMPACT_FORMAT.NAME = Compact Format
-CONNECTION.NAME=Component List
+CONNECTION.NAME=Connection
 DATABASE.NAME=Database
 DATA_NODE.NAME=Data node
 DATA_ACTION.ITEM.DELETE=Delete
@@ -71,4 +71,11 @@ WRITE_CONCERN.ITEM.JOURNALED=JOURNALED
 WRITE_CONCERN.ITEM.REPLICA_ACKNOWLEDGED=REPLICA_ACKNOWLEDGED
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption) 
+BULK_WRITE_GROUP.NAME=Bulk write
+SET_BULK_WRITE.NAME=Bulk write
+BULK_WRITE_TYPE.NAME=Bulk write type
+BULK_WRITE_TYPE.ITEM.UNORDERED=Unordered
+BULK_WRITE_TYPE.ITEM.ORDERED=Ordered
+BULK_WRITE_SIZE.NAME=Bulk write size
+
 CREATE_EMPTY_ELEMENT.NAME=Create empty element if needed
