[TBD-1953] Code review.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -31,7 +31,7 @@ READ_PREFERENCE.ITEM.NEAREST=Nearest
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption) 
 
 AUTHENTICATION.NAME=Authentication
-USE_AUTHENTICATION.NAME= Use authentication
+REQUIRED_AUTHENTICATION.NAME= Use authentication
 AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
 AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environements)
 AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
