--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -14,7 +14,6 @@ PASSWORD.NAME=Password
 PORT.NAME=Port
 PROPERTY.NAME=PROPERTY
 QUERY.NAME=Query
-REQUIRED_AUTHENTICATION.NAME=Required authentication
 SORT.NAME=Sort by
 SORT.ITEM.COLNAME=Column
 SORT.ITEM.ORDER=Order asc or desc?
@@ -27,7 +26,6 @@ REPLICA_SET.NAME=Replica address
 REPLICA_SET.ITEM.REPLICA_HOST=Replica host
 REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
-AUTHENTICATION.NAME=Authentication
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
@@ -46,3 +44,15 @@ READ_PREFERENCE.ITEM.NEAREST=Nearest
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption)
 NOTE_ISOLATION.NAME=If you are running on a Sharded Cluster, please, be sure to use to include shard key on the query.
+
+AUTHENTICATION.NAME=Authentication
+REQUIRED_AUTHENTICATION.NAME= Use authentication
+AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
+AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environements)
+AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
+AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
+AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
+
+KRB_USER_PRINCIPAL.NAME= User principal
+KRB_REALM.NAME=Realm
+KRB_KDC.NAME=KDC server
