--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -12,7 +12,6 @@ LONG_NAME=Execute MongoDB command or function
 PASSWORD.NAME=Password
 PORT.NAME=Port
 PROPERTY.NAME=PROPERTY
-REQUIRED_AUTHENTICATION.NAME=Required authentication
 FUNCTION_PARAMETERS.NAME=Parameters value
 FUNCTION_PARAMETERS.ITEM.PARAMETER=Parameters value
 USERNAME.NAME=Username
@@ -22,7 +21,6 @@ REPLICA_SET.NAME=Replica address
 REPLICA_SET.ITEM.REPLICA_HOST=Replica host
 REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
-AUTHENTICATION.NAME=Authentication
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
@@ -30,3 +28,15 @@ DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
 
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption) 
+
+AUTHENTICATION.NAME=Authentication
+REQUIRED_AUTHENTICATION.NAME= Use authentication
+AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
+AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environements)
+AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
+AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
+AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
+
+KRB_USER_PRINCIPAL.NAME= User principal
+KRB_REALM.NAME=Realm
+KRB_KDC.NAME=KDC server
