[TBD-1953] Add Kerberos authentication on tMongoDBBulkLoad

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages.properties
@@ -3,7 +3,6 @@
 ADDITIONAL_ARGS.ITEM.ARGUMENT=Argument
 ADDITIONAL_ARGS.ITEM.VALUE=Value
 ADDITIONAL_ARGS.NAME=Additional arguments
-AUTHENTICATION.NAME=Authentication
 COLLECTION.NAME=Collection
 CONNECTION.NAME=Connection
 DATA.NAME=Data file
@@ -31,7 +30,6 @@ REPLICA_NAME.NAME=Replica set name
 REPLICA_SET.ITEM.REPLICA_HOST=Replica host
 REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 REPLICA_SET.NAME=Replica address
-REQUIRED_AUTHENTICATION.NAME=Required authentication
 UPSERT_FIELDS.ITEM.COLNAME=Schema column
 UPSERT_FIELDS.NAME=Upsert fields
 USERNAME.NAME=Username
@@ -40,3 +38,15 @@ USE_REPLICA_SET.NAME=Use replica set address
 JSON_ARRAY.NAME=The Json file start with an array
 
 USE_SSL.NAME=Use SSL connection
+
+AUTHENTICATION.NAME=Authentication
+REQUIRED_AUTHENTICATION.NAME= Use authentication
+AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
+AUTHENTICATION_MECHANISM.ITEM.MONGODBX509_MEC=MONGODB-C509
+AUTHENTICATION_MECHANISM.ITEM.MONGODBCR_MEC=MONGODB-CR (MongoDB TLS/SSL)
+AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
+AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL (Default)
+AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
+
+KRB_SERVICE_NAME.NAME=GSSAPI service name
+KRB_HOST_NAME.NAME=GSSAPI host name
