[TBD-1953] Add Kerberos authentication on tMongoDBOutput.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -1,6 +1,5 @@
 #
 #Mon Apr 12 14:26:42 CEST 2010
-AUTHENTICATION.NAME=Authentication
 COLLECTION.NAME=Collection
 COMPACT_FORMAT.NAME = Compact Format
 CONNECTION.NAME=Connection
@@ -43,7 +42,6 @@ PORT.NAME=Port
 PROPERTY.NAME=PROPERTY
 QUERY_NODE.NAME=Query node
 REMOVE_ROOT.NAME=Remove root node.
-REQUIRED_AUTHENTICATION.NAME=Required authentication
 ROOT.ITEM.ATTRIBUTE=Attribute
 ROOT.ITEM.ORDER=Order
 ROOT.ITEM.COLUMN=Related Column
@@ -79,3 +77,15 @@ BULK_WRITE_TYPE.ITEM.ORDERED=Ordered
 BULK_WRITE_SIZE.NAME=Bulk write size
 
 CREATE_EMPTY_ELEMENT.NAME=Create empty element if needed
+
+AUTHENTICATION.NAME=Authentication
+REQUIRED_AUTHENTICATION.NAME= Use authentication
+AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
+AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environements)
+AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
+AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
+AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
+
+KRB_USER_PRINCIPAL.NAME= User principal
+KRB_REALM.NAME=Realm
+KRB_KDC.NAME=KDC server
