[TBD-1994] Specify that the replicat set option is now allowing multiple mongos (query router).

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages.properties
@@ -26,15 +26,16 @@ NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
 PORT.NAME=Port
 PRINT_LOG.NAME=Print Log
+SPECIFY_REPLICA_SET.NAME=Specify replica set
 REPLICA_NAME.NAME=Replica set name
-REPLICA_SET.ITEM.REPLICA_HOST=Replica host
-REPLICA_SET.ITEM.REPLICA_PORT=Replica port
-REPLICA_SET.NAME=Replica address
+REPLICA_SET.ITEM.REPLICA_HOST=Host
+REPLICA_SET.ITEM.REPLICA_PORT=Port
+REPLICA_SET.NAME=Server addresses
 UPSERT_FIELDS.ITEM.COLNAME=Schema column
 UPSERT_FIELDS.NAME=Upsert fields
 USERNAME.NAME=Username
 USE_LOCAL_DBPATH.NAME=Use local DB path
-USE_REPLICA_SET.NAME=Use replica set address
+USE_REPLICA_SET.NAME=Use replica set address or multiple query routers
 JSON_ARRAY.NAME=The Json file start with an array
 
 USE_SSL.NAME=Use SSL connection
