--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -51,10 +51,10 @@ ROOT.NAME=Root
 SCHEMA.NAME=SCHEMA
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
-USE_REPLICA_SET.NAME=Use replica set address
-REPLICA_SET.NAME=Replica address
-REPLICA_SET.ITEM.REPLICA_HOST=Replica host
-REPLICA_SET.ITEM.REPLICA_PORT=Replica port
+USE_REPLICA_SET.NAME=Use replica set address or multiple query routers
+REPLICA_SET.NAME=Server addresses
+REPLICA_SET.ITEM.REPLICA_HOST=Host
+REPLICA_SET.ITEM.REPLICA_PORT=Port
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
