--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -9,10 +9,10 @@ PASSWORD.NAME=Password
 PORT.NAME=Port
 PROPERTY.NAME=PROPERTY
 USERNAME.NAME=Username
-USE_REPLICA_SET.NAME=Use replica set address
-REPLICA_SET.NAME=Replica address
-REPLICA_SET.ITEM.REPLICA_HOST=Replica host
-REPLICA_SET.ITEM.REPLICA_PORT=Replica port
+USE_REPLICA_SET.NAME=Use replica set address or multiple query routers
+REPLICA_SET.NAME=Server addresses
+REPLICA_SET.ITEM.REPLICA_HOST=Host
+REPLICA_SET.ITEM.REPLICA_PORT=Port
 CONNECTION.NAME=Connection
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
