[TBD-1953] Fix Kerberos support in tMongoDBBulkLoad And disable SSL/Kerberos when using Kerberos/SSL

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages.properties
@@ -38,7 +38,7 @@ USE_LOCAL_DBPATH.NAME=Use local DB path
 USE_REPLICA_SET.NAME=Use replica set address or multiple query routers
 JSON_ARRAY.NAME=The Json file start with an array
 
-USE_SSL.NAME=Use SSL connection
+USE_SSL.NAME=Use SSL connection (Not compatible with Kerberos authentication)
 
 AUTHENTICATION.NAME=Authentication
 REQUIRED_AUTHENTICATION.NAME= Use authentication
@@ -47,7 +47,9 @@ AUTHENTICATION_MECHANISM.ITEM.MONGODBX509_MEC=MONGODB-C509
 AUTHENTICATION_MECHANISM.ITEM.MONGODBCR_MEC=MONGODB-CR (MongoDB TLS/SSL)
 AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
 AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL (Default)
-AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
+AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS) (Not compatible with SSL)
 
 KRB_SERVICE_NAME.NAME=GSSAPI service name
 KRB_HOST_NAME.NAME=GSSAPI host name
+KRB_USER_PRINCIPAL.NAME=User principal
+KRB_AUTH_DATABASE.NAME=Authentication Database
