TUP-2635: Add wizard to import all Hadoop configuration from site files https://jira.talendforge.org/browse/TUP-2635 provide API to get configuration from Cloudera Manager

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 		<module>main/plugins/org.talend.oozie.scheduler</module>
 		<module>main/plugins/org.talend.rcp.branding.tos.bigdata</module>
 		<module>main/plugins/org.talend.repository.hadoopcluster</module>
+		<module>main/plugins/org.talend.repository.hadoopcluster.configurator</module>
 		<module>main/plugins/org.talend.repository.hbaseprovider</module>
 		<module>main/plugins/org.talend.repository.hcatalog</module>
 		<module>main/plugins/org.talend.repository.hdfs</module>
