--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
@@ -8,7 +8,9 @@ DATA_NODE.NAME=Data node
 DATA_ACTION.ITEM.DELETE=Delete
 DATA_ACTION.ITEM.INSERT=Insert
 DATA_ACTION.ITEM.UPDATE=Update
+DATA_ACTION.ITEM.SET=Set
 DATA_ACTION.ITEM.UPSERT=Upsert
+DATA_ACTION.ITEM.UPSERT_WITH_SET=Upsert with set
 DATA_ACTION.NAME=Action on data
 DIE_ON_ERROR.NAME=Die on error
 DROP_COLLECTION_CREATE.NAME=Drop collection if exist
