[TUP-2635] Add wizard to import all Hadoop configuration from site files

--- a/main/plugins/org.talend.repository.hadoopcluster/build.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/build.properties
@@ -2,6 +2,8 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
-               icons/
+               icons/,\
+               lib/commons-logging-1.0.4.jar,\
+               lib/hadoop-core-1.0.0.jar
 source.. = src/
 output.. = bin/
