[TBD-1995] Support Kerberos in embedded mode with HiveServer2

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -141,6 +141,8 @@ METASTORE_JDBC_URL.NAME=Metastore URL
 METASTORE_CLASSNAME.NAME=Driver class
 METASTORE_USERNAME.NAME=Username
 METASTORE_PASSWORD.NAME=Password
+HIVESERVER2_LOCAL_PRINCIPAL.NAME=HiveServer2 local user principal
+HIVESERVER2_LOCAL_KEYTAB.NAME=HiveServer2 local user keytab
 
 USE_SSL.NAME=Use SSL encryption
 SSL_TRUST_STORE.NAME=Trust store path
