--- a/main/plugins/org.talend.repository.hadoopcluster/build.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/build.properties
@@ -2,8 +2,6 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
-               icons/,\
-               lib/commons-logging-1.0.4.jar,\
-               lib/hadoop-core-1.0.0.jar
+               icons/
 source.. = src/
 output.. = bin/
