--- a/main/plugins/org.talend.repository.hadoopcluster.configurator/build.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster.configurator/build.properties
@@ -3,29 +3,10 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/cloudera-manager-api-5.4.0.jar,\
-               lib/commons-lang-2.6.jar,\
-               lib/commons-logging-1.0.4.jar,\
-               lib/cxf-api-2.7.5.jar,\
-               lib/cxf-rt-bindings-xml-2.7.5.jar,\
-               lib/cxf-rt-core-2.7.5.jar,\
-               lib/cxf-rt-frontend-jaxrs-2.7.5.jar,\
-               lib/cxf-rt-transports-http-2.7.5.jar,\
                lib/geronimo-javamail_1.4_spec-1.7.1.jar,\
-               lib/guava-14.0.jar,\
-               lib/hadoop-core-1.0.0.jar,\
                lib/hamcrest-core-1.3.jar,\
-               lib/jackson-annotations-2.1.0.jar,\
-               lib/jackson-core-2.1.0.jar,\
-               lib/jackson-databind-2.1.0.jar,\
                lib/jackson-jaxrs-json-provider-2.1.0.jar,\
                lib/jackson-module-jaxb-annotations-2.1.0.jar,\
-               lib/javax.ws.rs-api-2.0-m10.jar,\
                lib/jaxb-impl-2.2.6.jar,\
-               lib/joda-time-2.1.jar,\
                lib/jsr250-api-1.0.jar,\
-               lib/junit-4.11.jar,\
-               lib/servlet-api-2.5.jar,\
-               lib/stax2-api-3.1.1.jar,\
-               lib/woodstox-core-asl-4.2.0.jar,\
-               lib/wsdl4j-1.6.3.jar,\
-               lib/xmlschema-core-2.0.3.jar
+               lib/joda-time-2.1.jar
