[TBD-1512] Add hive 0.13.1 compatibility for EMR in standalone mode.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -63,6 +63,7 @@ HIVE_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
 HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
 HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0 (Deprecated)
 HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8 (Deprecated)
+HIVE_VERSION.ITEM.APACHE_2_4_0_EMR_0_13_1=Apache 2.4.0 (Hive 0.13.1)
 HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
 HIVE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (Hive 0.11.0)
 HIVE_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_1=Microsoft HD Insight 3.1
