--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaCreateTopic/tKafkaCreateTopic_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaCreateTopic/tKafkaCreateTopic_messages.properties
@@ -10,3 +10,14 @@ ZOOKEEPER_CONNECT.NAME=Zookeeper quorum list
 KAFKA_TOPIC.NAME=Topic name
 KAFKA_REPLICATION.NAME=Replication factor
 KAFKA_PARTITION.NAME=Number of partitions
+KAFKA_RETENTION_CHECK.NAME=Set topic retention time (ms)
+KAFKA_RETENTION.NAME=
+
+KAFKA_TOPIC_PROPERTIES.NAME=Topic properties
+KAFKA_TOPIC_PROPERTIES.ITEM.PROPERTY=Property
+KAFKA_TOPIC_PROPERTIES.ITEM.VALUE=Value
+
+TOPICACTION.NAME=Action on topic
+
+TOPICACTION.ITEM.CREATE_TOPIC=Create topic
+TOPICACTION.ITEM.CREATE_IF_NOT_EXIST=Create topic if not exists
