[TBD-2075] Fix tKafkaInput offset storage option for DI

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
@@ -22,7 +22,7 @@ AUTO_OFFSET_RESET.ITEM.LARGEST=From latest
 AUTO_OFFSET_RESET.ITEM.SMALLEST=From beginning
 GROUP_ID.NAME=Consumer group id
 
-KAFKA_OFFSETS_STORAGE.NAME=Offsets storage
-KAFKA_OFFSETS_STORAGE.ITEM.ZOOKEEPER=Zookeeper
-KAFKA_OFFSETS_STORAGE.ITEM.KAFKA=Kafka
+KAFKA_OFFSET_STORAGE.NAME=Offset storage
+KAFKA_OFFSET_STORAGE.ITEM.ZOOKEEPER=Zookeeper
+KAFKA_OFFSET_STORAGE.ITEM.KAFKA=Kafka
 KAFKA_DUAL_COMMIT_CHECK.NAME=Enable dual commit
