--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -182,6 +182,10 @@
             index="HDFS:MAPR:MAPR401"
             libraries="maprfs-4.0.1-mapr.jar;hadoop-auth-2.4.1-mapr-1408.jar;hadoop-common-2.4.1-mapr-1408.jar;zookeeper-3.4.5-mapr-1406.jar;json-20080701.jar;guava-13.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;commons-logging-1.1.3.jar;commons-collections-3.2.1.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;libprotodefs.jar;log4j-1.2.17.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
+      <classloader
+            index="HDFS:MAPR:MAPR410"
+            libraries="commons-logging-1.1.3.jar;avro-1.7.6.jar;json-20080701.jar;log4j-1.2.17.jar;jackson-core-asl-1.8.8.jar;protobuf-java-2.5.0.jar;hadoop-auth-2.5.1-mapr-1503.jar;hadoop-common-2.5.1-mapr-1503.jar;maprfs-4.1.0-mapr.jar;maprfs-jni-4.1.0-mapr.jar;guava-13.0.1.jar;libprotodefs-4.1.0-mapr.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;slf4j-log4j12-1.7.5.jar;commons-collections-3.2.1.jar;jackson-mapper-asl-1.8.8.jar;zookeeper-3.4.5-mapr-1406.jar;slf4j-api-1.7.5.jar">
+      </classloader>
    </extension>
    <extension
          point="org.talend.core.runtime.service">
@@ -288,6 +292,11 @@
             index="MAP_REDUCE:MAPR:MAPR401"
             libraries="hadoop-common-2.4.1-mapr-1408.jar;maprfs-4.0.1-mapr.jar;hadoop-auth-2.4.1-mapr-1408.jar;hadoop-hdfs-2.4.1-mapr-1408.jar;hadoop-mapreduce-client-common-2.4.1-mapr-1408.jar;hadoop-mapreduce-client-core-2.4.1-mapr-1408.jar;hadoop-mapreduce-client-jobclient-2.4.1-mapr-1408.jar;hadoop-yarn-api-2.4.1-mapr-1408.jar;hadoop-yarn-client-2.4.1-mapr-1408.jar;hadoop-yarn-common-2.4.1-mapr-1408.jar;json-20080701.jar;zookeeper-3.4.5-mapr-1406.jar;avro-1.5.4.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;guava-13.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar"
             parent="HDFS:MAPR:MAPR401">
+      </classloader>
+      <classloader
+            index="MAP_REDUCE:MAPR:MAPR410"
+            libraries="commons-codec-1.4.jar;protobuf-java-2.5.0.jar;hadoop-mapreduce-client-jobclient-2.5.1-mapr-1503.jar;zookeeper-3.4.5-mapr-1406.jar;jackson-core-asl-1.8.8.jar;hadoop-yarn-api-2.5.1-mapr-1503.jar;commons-lang-2.6.jar;hadoop-yarn-common-2.5.1-mapr-1503.jar;hadoop-hdfs-2.5.1-mapr-1503.jar;commons-logging-1.1.3.jar;parquet-hadoop-bundle-1.3.2.jar;snappy-java-1.0.5.jar;javax.ws.rs-api-2.0-m10.jar;talend-mapred-lib.jar;log4j-1.2.17.jar;jackson-mapper-asl-1.8.8.jar;hadoop-mapreduce-client-common-2.5.1-mapr-1503.jar;hadoop-yarn-client-2.5.1-mapr-1503.jar;maprfs-jni-4.1.0-mapr.jar;hadoop-mapreduce-client-core-2.5.1-mapr-1503.jar;json-20080701.jar;maprfs-4.1.0-mapr.jar;commons-configuration-1.6.jar;avro-1.7.6.jar;slf4j-api-1.7.5.jar;hadoop-auth-2.5.1-mapr-1503.jar;commons-cli-1.2.jar;hadoop-common-2.5.1-mapr-1503.jar;org.apache.commons.httpclient_3.1.0.v201005080502.jar;commons-io-2.1.jar;commons-collections-3.2.1.jar;slf4j-log4j12-1.7.5.jar;guava-13.0.1.jar"
+            parent="HDFS:MAPR:MAPR410">
       </classloader>
       <classloader
             index="MAP_REDUCE:PIVOTAL_HD:PIVOTAL_HD_1_0_1"
