--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
@@ -33,6 +33,7 @@ DB_VERSION.ITEM.MAPR213=MapR 2.1.3
 DB_VERSION.ITEM.MAPR301=MapR 3.0.1
 DB_VERSION.ITEM.MAPR310=MapR 3.1.0
 DB_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
+DB_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
 DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0 (Deprecated)
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
