--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -90,6 +90,7 @@ HBASE_VERSION.ITEM.MAPR213=MapR 2.1.3
 HBASE_VERSION.ITEM.MAPR301=MapR 3.0.1
 HBASE_VERSION.ITEM.MAPR310=MapR 3.1.0
 HBASE_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
+HBASE_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
@@ -108,3 +109,6 @@ KEYTAB_PATH.NAME=Keytab
 AUTHENTICATION.NAME=Authentication
 HBASE_MASTER_PRINCIPAL.NAME=Hbase Master principal
 HBASE_REGIONSERVER_PRINCIPAL.NAME=Hbase Region Server principal
+
+SET_TABLE_NS_MAPPING.NAME=Set table Namespace mappings
+TABLE_NS_MAPPING.NAME=
