--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -33,7 +33,7 @@ USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encr
 AUTHENTICATION.NAME=Authentication
 REQUIRED_AUTHENTICATION.NAME= Use authentication
 AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
-AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environements)
+AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environments)
 AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
 AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
 AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
