TBD-2011 - Extended authentication properties depending on MongoDB version

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -48,7 +48,7 @@ NOTE_ISOLATION.NAME=If you are running on a Sharded Cluster, please, be sure to 
 AUTHENTICATION.NAME=Authentication
 REQUIRED_AUTHENTICATION.NAME= Use authentication
 AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
-AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environements)
+AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environments)
 AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
 AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
 AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
