--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -83,7 +83,7 @@ CREATE_EMPTY_ELEMENT.NAME=Create empty element if needed
 AUTHENTICATION.NAME=Authentication
 REQUIRED_AUTHENTICATION.NAME= Use authentication
 AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
-AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environements)
+AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environments)
 AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
 AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
 AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
