--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
@@ -36,3 +36,11 @@ DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
 
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption) 
+
+AUTHENTICATION.NAME=Authentication
+REQUIRED_AUTHENTICATION.NAME= Use authentication
+AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
+AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environments)
+AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
+AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
+AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
