TDI-32030 : fixed toolbar disappear forever by setting all toolbar visible before they are rendered

--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
@@ -40,6 +40,10 @@
             name="applicationCSSResources"
             value="platform:/plugin/org.talend.themes.css.talend/themes/">
       </property>
+      <property
+            name="lifeCycleURI"
+            value="bundleclass://org.talend.core.ui/org.talend.core.ui.TalendStudioLifeCycleManager">
+      </property>
    </product>
 </extension>
    <extension
