--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -131,6 +131,8 @@ METASTORE_JDBC_URL.NAME=Metastore URL
 METASTORE_CLASSNAME.NAME=Driver class
 METASTORE_USERNAME.NAME=Username
 METASTORE_PASSWORD.NAME=Password
+HIVESERVER2_LOCAL_PRINCIPAL.NAME=HiveServer2 local user principal
+HIVESERVER2_LOCAL_KEYTAB.NAME=HiveServer2 local user keytab
 
 ADVANCED_PROPERTIES.NAME=Hive Properties 
 ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
