[TBD-1969] Cassandra - API Type DataStax should have actions for keyspace https://jira.talendforge.org/browse/TBD-1969

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -37,7 +37,6 @@ INC_SUPER_KEY.NAME=Include super columns in standard columns
 KEYSPACE_CONFIGURATION.NAME=Keyspace configuration
 KEY_COLUMN.NAME=Row key column
 KEY_SPACE.NAME=Keyspace
-KEY_SPACE_DATASTAX.NAME=Keyspace
 LONG_NAME=Output Data to a cassandra solution.
 NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
@@ -97,3 +96,10 @@ ROW_KEY_IN_LIST.ITEM.COLUMN_NAME=key column
 DELETE_COLUMN_BY_POSITION_KEY.NAME=Delete collection column based on position/key
 DELETE_COLUMN_BY_POSITION_KEY.ITEM.COLUMN_NAME=column
 USE_UNLOGGED_BATCH.NAME=Use unlogged batch
+REPLICA_STRATEGY.NAME=Replica strategy
+REPLICA_STRATEGY.ITEM.NetworkTopologyStrategy=NetworkTopologyStrategy
+REPLICA_STRATEGY.ITEM.SimpleStrategy=SimpleStrategy
+SIMEPLE_REPLICA_NUMBER.NAME=Replica number
+NETWORK_REPLICA_TABLE.NAME=Datacenter and Replica
+NETWORK_REPLICA_TABLE.ITEM.DATACENTER_NAME=Datacenter name
+NETWORK_REPLICA_TABLE.ITEM.REPLICA_NUMBER=Replica number
