--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -43,7 +43,7 @@ READ_PREFERENCE.ITEM.SECONDARY_PREFERRED=Secondary preferred
 READ_PREFERENCE.ITEM.NEAREST=Nearest
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption)
-NOTE_ISOLATION.NAME=If you are running on a Sharded Cluster, please, be sure to use to include shard key on the query.
+NOTE_ISOLATION.NAME=If you are running on a Sharded Cluster, you should include shard key in the query.
 
 AUTHENTICATION.NAME=Authentication
 REQUIRED_AUTHENTICATION.NAME= Use authentication
