--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.talend.studio</groupId>
 		<artifactId>parent-pom</artifactId>
-		<version>6.1.0-SNAPSHOT</version>
+		<version>6.1.0-M0</version>
 		<relativePath />
 	</parent>
 	<artifactId>tbd-studio-se</artifactId>
