--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -134,6 +134,11 @@ METASTORE_PASSWORD.NAME=Password
 HIVESERVER2_LOCAL_PRINCIPAL.NAME=HiveServer2 local user principal
 HIVESERVER2_LOCAL_KEYTAB.NAME=HiveServer2 local user keytab
 
+USE_SSL.NAME=Use SSL encryption
+SSL_TRUST_STORE.NAME=Trust store path
+SSL_TRUST_STORE_PASSWORD.NAME=Trust store password
+ENCRYPTION.NAME=Encryption
+
 ADVANCED_PROPERTIES.NAME=Hive Properties 
 ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 ADVANCED_PROPERTIES.ITEM.VALUE=Value
