[TBD-2350] Add the possibility to choose between String and byte[] on the output schema of tKafkaInput (DI)

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
@@ -26,3 +26,7 @@ KAFKA_OFFSET_STORAGE.NAME=Offset storage
 KAFKA_OFFSET_STORAGE.ITEM.ZOOKEEPER=Zookeeper
 KAFKA_OFFSET_STORAGE.ITEM.KAFKA=Kafka
 KAFKA_DUAL_COMMIT_CHECK.NAME=Enable dual commit
+
+OUTPUT_TYPE.NAME=Output type
+OUTPUT_TYPE.ITEM.BYTES=byte[]
+OUTPUT_TYPE.ITEM.STRING=String
