[TBD-2184] Add an option to alter topic in tKafkaCreateTopic

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaCreateTopic/tKafkaCreateTopic_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaCreateTopic/tKafkaCreateTopic_messages.properties
@@ -20,4 +20,5 @@ KAFKA_TOPIC_PROPERTIES.ITEM.VALUE=Value
 TOPICACTION.NAME=Action on topic
 
 TOPICACTION.ITEM.CREATE_TOPIC=Create topic
-TOPICACTION.ITEM.CREATE_IF_NOT_EXIST=Create topic if not exists
+TOPICACTION.ITEM.CREATE_IF_NOT_EXISTS=Create topic if not exists
+TOPICACTION.ITEM.ALTER_TOPIC=Alter topic
