[TBD-2404] For tCassandraOutput, make DROP_CREATE and CREATE column family work when API type is datastax https://jira.talendforge.org/browse/TBD-2404

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -5,6 +5,7 @@ ACTION_ON_COLUMN_FAMILY.ITEM.CREATE_IF_NOT_EXISTS=Create column family if not ex
 ACTION_ON_COLUMN_FAMILY.ITEM.DROP_CREATE=Drop and create column family
 ACTION_ON_COLUMN_FAMILY.ITEM.DROP_IF_EXISTS_AND_CREATE=Drop column family if exists and create
 ACTION_ON_COLUMN_FAMILY.ITEM.NONE=None
+ACTION_ON_COLUMN_FAMILY.ITEM.TRUNCATE=Truncate column family
 ACTION_ON_COLUMN_FAMILY.NAME=Action on column family
 ACTION_ON_DATA.ITEM.DELETE=Delete
 ACTION_ON_DATA.ITEM.INSERT=Insert
