TBD-2371:Mongo DB version is not displayed and tMongoDBConnection version is not consistent with before when I import deprecated db version and job

--- a/main/plugins/org.talend.repository.nosql/plugin.xml
+++ b/main/plugins/org.talend.repository.nosql/plugin.xml
@@ -247,6 +247,15 @@
             name="UnifyPasswordEncryption4NoSQLConnectionMigrationTask"
             version="5.6.0">
       </projecttask>
+      <projecttask
+            beforeLogon="false"
+            breaks="6.0.0"
+            class="org.talend.repository.nosql.repository.migration.ChangeMongoDBConnectionMinimalVersionMigrationTask"
+            id="org.talend.repository.nosql.repository.migration.ChangeMongoDBConnectionMinimalVersionMigrationTask"
+            description="Change mongoDB connection version to 3.0.X"
+            name="ChangeMongoDBConnectionMinimalVersionMigrationTask"
+            version="6.0.0">
+       </projecttask>
    </extension>
    <extension
          point="org.talend.core.repository.repository_context">
