--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
@@ -40,6 +40,7 @@ DB_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
 DB_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
 DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
 DB_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0
+DB_VERSION.ITEM.EMR_4_0_0=EMR 4.0.0 (Apache 2.6.0)
 
 USE_DATANODE_HOSTNAME.NAME=Use Datanode Hostname
 
