--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSOutputRaw/tHDFSOutputRaw_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSOutputRaw/tHDFSOutputRaw_messages.properties
@@ -46,7 +46,8 @@ DB_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
 DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
 DB_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
-DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0 
+DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
+DB_VERSION.ITEM.EMR_4_0_0=EMR 4.0.0 (Apache 2.6.0) 
 
 USE_DATANODE_HOSTNAME.NAME=Use Datanode Hostname
 FS_DEFAULT_NAME.NAME=NameNode URI
