TBD-2399 - Add support for EMR 4.0.0 for Pig

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -42,6 +42,7 @@ PIG_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
 PIG_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
 PIG_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Pig 0.9.2)
 PIG_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (Pig 0.12.0)
+PIG_VERSION.ITEM.EMR_4_0_0=EMR 4.0.0 (Pig 0.14.0)
 PIG_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 PIG_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 PIG_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_1=Microsoft HD Insight 3.1
