--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -109,6 +109,7 @@ HBASE_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
 HBASE_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
 HBASE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (HBase 0.92.0)
 HBASE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (HBase 0.94.18)
+HBASE_VERSION.ITEM.EMR_4_0_0=EMR 4.0.0
 HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 HBASE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 
