TUP-3348 feature: Support EMR 4.0 for 6.0.1 in Wizards https://jira.talendforge.org/browse/TUP-3348

--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -151,6 +151,14 @@
             libraries="hadoop-annotations-2.4.0.jar;hadoop-yarn-api-2.4.0.jar;hadoop-yarn-client-2.4.0.jar;hadoop-yarn-common-2.4.0.jar;hadoop-auth-2.4.0.jar;hadoop-common-2.4.0.jar;hadoop-hdfs-2.4.0.jar;hadoop-mapreduce-client-common-2.4.0.jar;hadoop-mapreduce-client-core-2.4.0.jar;hadoop-mapreduce-client-jobclient-2.4.0.jar;commons-logging-1.1.3.jar;protobuf-java-2.5.0.jar;commons-httpclient-3.1.jar;jets3t-0.9.1-emr-2.4.0.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;commons-lang-2.6.jar;gson-2.1.jar;EmrMetrics-1.0.jar;guava-11.0.2.jar;commons-collections-3.2.1.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;hadoop-conf-kerberos.jar;avro-1.5.4.jar">
       </classloader>
       <classloader
+            index="HDFS:AMAZON_EMR:EMR_4_0_0"
+            libraries="hadoop-common-2.6.0-amzn-0.jar;hadoop-hdfs-2.6.0-amzn-0.jar;hadoop-auth-2.6.0-amzn-0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;httpcore-4.3.2.jar;httpclient-4.3.4.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;emr-metrics-client-2.0.0.jar;htrace-core-3.0.4.jar;avro-1.7.4.jar;jackson-mapper-asl-1.9.13.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-xc-1.9.13.jar">
+      </classloader>
+      <classloader
+            index="HDFS:AMAZON_EMR:EMR_4_0_0?USE_KRB"
+            libraries="hadoop-common-2.6.0-amzn-0.jar;hadoop-hdfs-2.6.0-amzn-0.jar;hadoop-auth-2.6.0-amzn-0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;httpcore-4.3.2.jar;httpclient-4.3.4.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;emr-metrics-client-2.0.0.jar;htrace-core-3.0.4.jar;avro-1.7.4.jar;jackson-mapper-asl-1.9.13.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-xc-1.9.13.jar;hadoop-conf-kerberos.jar">
+      </classloader>
+      <classloader
             index="HDFS:PIVOTAL_HD:PIVOTAL_HD_1_0_1"
             libraries="hadoop-hdfs-2.0.2-alpha-gphd-2.0.1.0.jar;hadoop-common-2.0.2-alpha-gphd-2.0.1.0.jar;hadoop-auth-2.0.2-alpha-gphd-2.0.1.0.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;guava-11.0.2.jar;log4j-1.2.17.jar;protobuf-java-2.4.0a.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar">
       </classloader>
@@ -317,6 +325,10 @@
       <classloader
             index="MAP_REDUCE:AMAZON_EMR:APACHE_2_4_0_EMR"
             libraries="commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;guava-11.0.2.jar;commons-collections-3.2.1.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;hadoop-annotations-2.4.0.jar;hadoop-yarn-api-2.4.0.jar;hadoop-yarn-client-2.4.0.jar;hadoop-yarn-common-2.4.0.jar;hadoop-auth-2.4.0.jar;hadoop-common-2.4.0.jar;hadoop-hdfs-2.4.0.jar;hadoop-mapreduce-client-common-2.4.0.jar;hadoop-mapreduce-client-core-2.4.0.jar;hadoop-mapreduce-client-jobclient-2.4.0.jar;commons-logging-1.1.3.jar;protobuf-java-2.5.0.jar;commons-httpclient-3.1.jar;jets3t-0.9.1-emr-2.4.0.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;commons-lang-2.6.jar;gson-2.1.jar;EmrMetrics-1.0.jar;log4j-1.2.17.jar">
+      </classloader>
+      <classloader
+            index="MAP_REDUCE:AMAZON_EMR:EMR_4_0_0"
+            libraries="hadoop-common-2.6.0-amzn-0.jar;hadoop-hdfs-2.6.0-amzn-0.jar;hadoop-auth-2.6.0-amzn-0.jar;hadoop-mapreduce-client-common-2.6.0-amzn-0.jar;hadoop-mapreduce-client-core-2.6.0-amzn-0.jar;hadoop-mapreduce-client-jobclient-2.6.0-amzn-0.jar;hadoop-yarn-api-2.6.0-amzn-0.jar;hadoop-yarn-client-2.6.0-amzn-0.jar;hadoop-yarn-common-2.6.0-amzn-0.jar;avro-1.7.4.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;httpcore-4.3.2.jar;httpclient-4.3.4.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;jackson-mapper-asl-1.9.13.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-xc-1.9.13.jar;jersey-client-1.9.jar;jersey-core-1.9.jar;log4j-1.2.17.jar;jetty-util-6.1.26-emr.jar;emr-metrics-client-2.0.0.jar;htrace-core-3.0.4.jar">
       </classloader>
    </extension>
 
