--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -207,3 +207,5 @@ TEZ_LIB_FOLDER.NAME=Install folder in HDFS
 TEZ_LIB_NAME.NAME=Lib jars
 TEZ_LIB_NAME.ITEM.JAR_NAME=Jar name
 TEZ_LIB_PATH.NAME=Lib path(folder or file)
+
+GROUP.NAME=Group
